Change base image to NVIDIA CUDA and update dependencies

--- a/hr_qna_rag_cap_project/deployment/Dockerfile
+++ b/hr_qna_rag_cap_project/deployment/Dockerfile
@@ -1,5 +1,7 @@
 # Use a minimal base image with Python 3.12 installed
-FROM python:3.12
+FROM nvidia/cuda:12.9.0-runtime-ubuntu22.04
+
+RUN apt-get update && apt-get install -y python3 python3-pip ninja-build git nvidia-container-toolkit
 
 # Set the working directory inside the container to /app
 WORKDIR /app
@@ -7,7 +9,11 @@ WORKDIR /app
 # Copy all files from the current directory on the host to the container's /app directory
 COPY . .
 
-RUN CMAKE_ARGS="-DLLAMA_CUBLAS=on" FORCE_CMAKE=1 pip3 install llama-cpp-python==0.1.85 --force-reinstall --no-cache-dir -q
+ENV CMAKE_ARGS="-DLLAMA_CUBLAS=on"
+ENV FORCE_CMAKE=1
+
+RUN pip3 install llama-cpp-python==0.1.85 --force-reinstall --no-cache-dir -q
+
 # Install Python dependencies listed in requirements.txt
 RUN pip3 install -r requirements.txt
 
